logs/Slang/generated/keywords/5.6.2--keyword_triand.sv.log
name: keyword_triand
description: The 'triand' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_triand.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_triand.sv:8:8: error: expected declarator
    bit triand;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_triand.sv:8:15: error: expected declarator
    bit triand;
              ^
